--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,8 @@ typings/
 
 package-lock.json
 .eslintrc.json
+.idea/workspace.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/node-todo-api.iml
+.idea/vcs.xml
